--- a/PythonAIDjango/PythonAIDjango/accounts/templates/profile/profile.html
+++ b/PythonAIDjango/PythonAIDjango/accounts/templates/profile/profile.html
@@ -60,3 +60,10 @@
         <a href="{% url 'accounts:profile_edit' %}" class="btn btn-primary">Edit Profile</a>
     </div>
 </div>
+
+<div class="profile-field">
+    <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Logout</button>
+    </form>
+</div>
