--- a/PythonAIDjango/PythonAIDjango/accounts/templates/profile/profile_not_found.html
+++ b/PythonAIDjango/PythonAIDjango/accounts/templates/profile/profile_not_found.html
@@ -7,5 +7,28 @@
 <body>
 	<h1>Profile Not Found</h1>
 	<p>The profile you are looking for does not exist.</p>
+	<style>
+		.btn-container {
+			margin-top: 30px;
+			display: flex;
+			gap: 15px;
+		}
+		.btn-link {
+			display: inline-block;
+			padding: 10px 24px;
+			background-color: #007bff;
+			color: #fff;
+			text-decoration: none;
+			border-radius: 5px;
+			font-weight: bold;
+			transition: background 0.2s;
+		}
+		.btn-link:hover {
+			background-color: #0056b3;
+		}
+	</style>
+	<div class="btn-container">
+		<a href="{% url 'login' %}" class="btn-link">Go to Login</a>
+	</div>
 </body>
 </html>
